fix detail scroll overflow

--- a/stylus/resume.styl
+++ b/stylus/resume.styl
@@ -134,10 +134,8 @@ circle
 
 .detail
 	opacity 0
-	overflow scroll
 	padding 20px
 	position absolute
-	bottom 0
 	left 0
 	right 0
 	top 0
@@ -199,8 +197,10 @@ circle
 #details
 	//background rgba(255,255,255,.5)
 	//box-shadow inset 3px 0 5px rgba(0,0,0,.2)
+	overflow auto
 	position absolute
 	bottom 0
 	right 0
 	top 0
 	width 30%
+	z-index 1
